crates/cli/tests/integration/snapshots/integration__snapshot_tests__codeclimate_duplicate_exports_only.snap
---
source: crates/cli/tests/integration/snapshot_tests.rs
expression: json_str
---
[
  {
    "type": "issue",
    "check_name": "fallow/duplicate-export",
    "description": "Export 'Config' appears in multiple modules",
    "categories": [
      "Bug Risk"
    ],
    "severity": "major",
    "fingerprint": "da73cab5c65b029d",
    "location": {
      "path": "src/config.ts",
      "lines": {
        "begin": 15
      }
    }
  },
  {
    "type": "issue",
    "check_name": "fallow/duplicate-export",
    "description": "Export 'Config' appears in multiple modules",
    "categories": [
      "Bug Risk"
    ],
    "severity": "major",
    "fingerprint": "cc6a09c8dc227321",
    "location": {
      "path": "src/types.ts",
      "lines": {
        "begin": 30
      }
    }
  }
]
