crates/cli/tests/integration/snapshots/integration__snapshot_tests__codeclimate_re_export_variant.snap
---
source: crates/cli/tests/integration/snapshot_tests.rs
expression: json_str
---
[
  {
    "type": "issue",
    "check_name": "fallow/unused-export",
    "description": "Re-export 'reExported' is never imported by other modules",
    "categories": [
      "Bug Risk"
    ],
    "severity": "major",
    "fingerprint": "551a4bfe2be74003",
    "location": {
      "path": "src/index.ts",
      "lines": {
        "begin": 1
      }
    }
  }
]
